package bridge;

/**
 * @author yimingyu
 * @date 2021/12/04
 */
public interface Brand {

    void call();
    void open();
    void close();
}
